                                                         -*- coding: utf-8 -*-

Changes with Apache Traffic Server 2.1.6

  *) [TS-661] Delay the copy of per transaction configs until a plugin
   actually tries to modify a setting. We also add these settings to the
   list of configurations that is overridable:

       proxy.config.http.cache.max_open_read_retries
       proxy.config.http.cache.open_read_retry_time

  *) [TS-660] Cache scan can not be canceled.

  *) [TS-505, TS-506] Changed the defaults to deal with read contention on
   the cache, this dramatically improves the performance on cache misses.

  *) [TS-655] Reorganize some code to reduce binary foot prints.

  *) [TS-653] Bogus logcat conversion of squid timestamps.

  *) [TS-643] Unable to purge objects on other servers in full cluster mode.

  *) New 64-bit random generator.

  *) [TS-639] Rename the management APIs from INK* to TS*.

  *) [TS-650] Remove the dead v2 stats code.

  *) [TS-649] Dynamic libraries for mgmt APIs.
    
    This makes libts -> libtsutil, and we now support making .so's for
    libtsutil.so and libtsmgmt.so. All binaries are changed to use this,
    except traffic_server which continues to use the libtsutil.a library
    (for performance on e.g. 32-bit platforms).
    
    This also renames the public API include file to be
    
         #include <ts/mgmtapi.h>


  *) [TS-647] Move Layout out of iocore and into lib/ts.

  *) [TS-638] Rename various directories:
      proxy/mgmt -> mgmt/
      proxy/mgmt/cop -> cop/

   All "cli" APIs are now also migrated into mgmt/cli, unified into one
   single cli.

  *) [TS-641] Cleanup of Web2/HTML2.

  *) [TS-636, TS-637] Remove various unused source files.

  *) [TS-631] Rename proxy/http2 -> proxy/http and proxy/mgmt2 to proxy/mgmt.

  *) [TS-582] Add an example to records.config for how to bind a specific IP.

  *) [TS-491] Cluster port was activated even with clustering disabled. This fix also